// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WebhookTriggerConfigPanel Triggers tests Renders/snapshots Initial Render - Custom Trigger Configuration Panel (enableSecureToken: false)  1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <form
      class="FormikForm--main"
    >
      <div>
        <div
          class="Layout--vertical StyledProps--main webhookConfigurationContainer StyledProps--padding-xxlarge"
        >
          <h2
            class="heading"
          >
            pipeline-triggers.triggerConfigurationLabel: pipeline-triggers.onNewWebhookTitle
          </h2>
          <div>
            <div
              class="StyledProps--font StyledProps--main main nameIdDescriptionTags"
            >
              <div
                class="InputWithIdentifier--txtNameContainer TextInput--main"
              >
                <div
                  class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
                >
                  <p
                    class="StyledProps--font StyledProps--main"
                  >
                    ID
                    :
                  </p>
                  <span
                    class="bp3-popover-wrapper"
                  >
                    <span
                      class="bp3-popover-target"
                    >
                      <div
                        class="bp3-editable-text bp3-editable-text-placeholder InputWithIdentifier--idValue"
                        tabindex="0"
                      >
                        <span
                          class="bp3-editable-text-content"
                          style="height: 1px; line-height: 1px; min-width: 0;"
                        />
                      </div>
                    </span>
                  </span>
                  <span
                    class="bp3-icon bp3-icon-edit StyledProps--main"
                    icon="edit"
                    style="vertical-align: middle;"
                  >
                    <svg
                      data-icon="edit"
                      height="12"
                      viewBox="0 0 16 16"
                      width="12"
                    >
                      <desc>
                        edit
                      </desc>
                      <path
                        d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </div>
                <div
                  class="bp3-form-group"
                  data-id="name-0"
                >
                  <label
                    class="bp3-label"
                    for="name"
                  >
                    name
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-input-group"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        name="name"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="StyledProps--font StyledProps--main"
              >
                <label
                  class="Label--main"
                  style="font-size: 13px; font-weight: normal;"
                >
                  optionalField
                  <span
                    class="bp3-icon bp3-icon-edit StyledProps--main editOpen StyledProps--color StyledProps--color-grey500"
                    data-name="edit"
                    data-testid="description-edit"
                    icon="edit"
                  >
                    <svg
                      data-icon="edit"
                      height="12"
                      viewBox="0 0 16 16"
                      width="12"
                    >
                      <desc>
                        edit
                      </desc>
                      <path
                        d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </label>
              </div>
              <div
                class="StyledProps--font StyledProps--main"
              >
                <label
                  class="Label--main"
                  style="font-size: 13px; font-weight: normal;"
                >
                  optionalField
                  <span
                    class="bp3-icon bp3-icon-edit StyledProps--main editOpen StyledProps--color StyledProps--color-grey500"
                    data-name="edit"
                    data-testid="tags-edit"
                    icon="edit"
                  >
                    <svg
                      data-icon="edit"
                      height="12"
                      viewBox="0 0 16 16"
                      width="12"
                    >
                      <desc>
                        edit
                      </desc>
                      <path
                        d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </label>
              </div>
            </div>
            <h2
              class="StyledProps--font StyledProps--font-h2 StyledProps--main listenOnNewWebhook"
              level="2"
            >
              pipeline-triggers.triggerConfigurationPanel.listenOnNewWebhook
            </h2>
            <section
              style="width: 650px;"
            >
              <div
                class="bp3-form-group"
                data-id="sourceRepo-1"
              >
                <label
                  class="bp3-label"
                  for="sourceRepo"
                >
                  pipeline-triggers.triggerConfigurationPanel.payloadType
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="bp3-popover-wrapper Select--main bp3-fill"
                  >
                    <div
                      class="bp3-popover-target"
                    >
                      <div
                        class="bp3-input-group"
                      >
                        <input
                          autocomplete="off"
                          class="bp3-input"
                          name="sourceRepo"
                          placeholder="Search..."
                          style="padding-right: 0px;"
                          type="text"
                          value="common.repo_provider.customLabel"
                        />
                        <span
                          class="bp3-input-action"
                        >
                          <span
                            class="bp3-icon bp3-icon-caret-down StyledProps--main StyledProps--padding-small"
                            icon="caret-down"
                          >
                            <svg
                              data-icon="caret-down"
                              height="14"
                              viewBox="0 0 16 16"
                              width="14"
                            >
                              <desc>
                                caret-down
                              </desc>
                              <path
                                d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </section>
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`WebhookTriggerConfigPanel Triggers tests Renders/snapshots Initial Render - Custom Trigger Configuration Panel (enableSecureToken:true, isEdit: false) 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <form
      class="FormikForm--main"
    >
      <div>
        <div
          class="Layout--vertical StyledProps--main webhookConfigurationContainer StyledProps--padding-xxlarge"
        >
          <h2
            class="heading"
          >
            pipeline-triggers.triggerConfigurationLabel: pipeline-triggers.onNewWebhookTitle
          </h2>
          <div>
            <div
              class="StyledProps--font StyledProps--main main nameIdDescriptionTags"
            >
              <div
                class="InputWithIdentifier--txtNameContainer TextInput--main"
              >
                <div
                  class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
                >
                  <p
                    class="StyledProps--font StyledProps--main"
                  >
                    ID
                    :
                  </p>
                  <span
                    class="bp3-popover-wrapper"
                  >
                    <span
                      class="bp3-popover-target"
                    >
                      <div
                        class="bp3-editable-text bp3-editable-text-placeholder InputWithIdentifier--idValue"
                        tabindex="0"
                      >
                        <span
                          class="bp3-editable-text-content"
                          style="height: 1px; line-height: 1px; min-width: 0;"
                        />
                      </div>
                    </span>
                  </span>
                  <span
                    class="bp3-icon bp3-icon-edit StyledProps--main"
                    icon="edit"
                    style="vertical-align: middle;"
                  >
                    <svg
                      data-icon="edit"
                      height="12"
                      viewBox="0 0 16 16"
                      width="12"
                    >
                      <desc>
                        edit
                      </desc>
                      <path
                        d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </div>
                <div
                  class="bp3-form-group"
                  data-id="name-0"
                >
                  <label
                    class="bp3-label"
                    for="name"
                  >
                    name
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-input-group"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        name="name"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="StyledProps--font StyledProps--main"
              >
                <label
                  class="Label--main"
                  style="font-size: 13px; font-weight: normal;"
                >
                  optionalField
                  <span
                    class="bp3-icon bp3-icon-edit StyledProps--main editOpen StyledProps--color StyledProps--color-grey500"
                    data-name="edit"
                    data-testid="description-edit"
                    icon="edit"
                  >
                    <svg
                      data-icon="edit"
                      height="12"
                      viewBox="0 0 16 16"
                      width="12"
                    >
                      <desc>
                        edit
                      </desc>
                      <path
                        d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </label>
              </div>
              <div
                class="StyledProps--font StyledProps--main"
              >
                <label
                  class="Label--main"
                  style="font-size: 13px; font-weight: normal;"
                >
                  optionalField
                  <span
                    class="bp3-icon bp3-icon-edit StyledProps--main editOpen StyledProps--color StyledProps--color-grey500"
                    data-name="edit"
                    data-testid="tags-edit"
                    icon="edit"
                  >
                    <svg
                      data-icon="edit"
                      height="12"
                      viewBox="0 0 16 16"
                      width="12"
                    >
                      <desc>
                        edit
                      </desc>
                      <path
                        d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </label>
              </div>
            </div>
            <h2
              class="StyledProps--font StyledProps--font-h2 StyledProps--main listenOnNewWebhook"
              level="2"
            >
              pipeline-triggers.triggerConfigurationPanel.listenOnNewWebhook
            </h2>
            <section
              style="width: 650px;"
            >
              <div
                class="bp3-form-group"
                data-id="sourceRepo-1"
              >
                <label
                  class="bp3-label"
                  for="sourceRepo"
                >
                  pipeline-triggers.triggerConfigurationPanel.payloadType
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="bp3-popover-wrapper Select--main bp3-fill"
                  >
                    <div
                      class="bp3-popover-target"
                    >
                      <div
                        class="bp3-input-group"
                      >
                        <input
                          autocomplete="off"
                          class="bp3-input"
                          name="sourceRepo"
                          placeholder="Search..."
                          style="padding-right: 0px;"
                          type="text"
                          value="common.repo_provider.customLabel"
                        />
                        <span
                          class="bp3-input-action"
                        >
                          <span
                            class="bp3-icon bp3-icon-caret-down StyledProps--main StyledProps--padding-small"
                            icon="caret-down"
                          >
                            <svg
                              data-icon="caret-down"
                              height="14"
                              viewBox="0 0 16 16"
                              width="14"
                            >
                              <desc>
                                caret-down
                              </desc>
                              <path
                                d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="Layout--horizontal StyledProps--main"
                style="justify-content: space-between; width: 324px;"
              >
                <div
                  class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
                >
                  <div
                    class="bp3-form-group"
                    data-id="secureToken-2"
                  >
                    <div
                      class="bp3-form-content"
                    >
                      <label
                        class="bp3-control bp3-checkbox StyledProps--font Checkbox--checkbox Checkbox--checkbox checkbox StyledProps--main StyledProps--inline"
                      >
                        <input
                          name="secureToken"
                          type="checkbox"
                        />
                        <span
                          class="bp3-control-indicator"
                        />
                        secureToken
                      </label>
                    </div>
                  </div>
                </div>
                <div
                  class="StyledProps--font StyledProps--main"
                />
              </div>
            </section>
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`WebhookTriggerConfigPanel Triggers tests Renders/snapshots Initial Render - Custom Trigger Configuration Panel (enableSecureToken:true, isEdit: true) 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <form
      class="FormikForm--main"
    >
      <div>
        <div
          class="Layout--vertical StyledProps--main webhookConfigurationContainer StyledProps--padding-xxlarge"
        >
          <h2
            class="heading"
          >
            pipeline-triggers.triggerConfigurationLabel
          </h2>
          <div>
            <div
              class="StyledProps--font StyledProps--main main nameIdDescriptionTags"
            >
              <div
                class="InputWithIdentifier--txtNameContainer TextInput--main"
              >
                <div
                  class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
                >
                  <p
                    class="StyledProps--font StyledProps--main"
                  >
                    ID
                    :
                  </p>
                  <span
                    class="bp3-popover-wrapper"
                  >
                    <span
                      class="bp3-popover-target"
                    >
                      <div
                        class="bp3-editable-text bp3-disabled bp3-editable-text-placeholder InputWithIdentifier--idValue"
                      >
                        <span
                          class="bp3-editable-text-content"
                          style="height: 1px; line-height: 1px; min-width: 0;"
                        />
                      </div>
                    </span>
                  </span>
                </div>
                <div
                  class="bp3-form-group"
                  data-id="name-0"
                >
                  <label
                    class="bp3-label"
                    for="name"
                  >
                    name
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-input-group"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        name="name"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="StyledProps--font StyledProps--main"
              >
                <label
                  class="Label--main"
                  style="font-size: 13px; font-weight: normal;"
                >
                  optionalField
                  <span
                    class="bp3-icon bp3-icon-edit StyledProps--main editOpen StyledProps--color StyledProps--color-grey500"
                    data-name="edit"
                    data-testid="description-edit"
                    icon="edit"
                  >
                    <svg
                      data-icon="edit"
                      height="12"
                      viewBox="0 0 16 16"
                      width="12"
                    >
                      <desc>
                        edit
                      </desc>
                      <path
                        d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </label>
              </div>
              <div
                class="StyledProps--font StyledProps--main"
              >
                <label
                  class="Label--main"
                  style="font-size: 13px; font-weight: normal;"
                >
                  optionalField
                  <span
                    class="bp3-icon bp3-icon-edit StyledProps--main editOpen StyledProps--color StyledProps--color-grey500"
                    data-name="edit"
                    data-testid="tags-edit"
                    icon="edit"
                  >
                    <svg
                      data-icon="edit"
                      height="12"
                      viewBox="0 0 16 16"
                      width="12"
                    >
                      <desc>
                        edit
                      </desc>
                      <path
                        d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </label>
              </div>
            </div>
            <h2
              class="StyledProps--font StyledProps--font-h2 StyledProps--main listenOnNewWebhook"
              level="2"
            >
              pipeline-triggers.triggerConfigurationPanel.listenOnNewWebhook
            </h2>
            <section
              style="width: 650px;"
            >
              <div
                class="bp3-form-group"
                data-id="sourceRepo-1"
              >
                <label
                  class="bp3-label"
                  for="sourceRepo"
                >
                  pipeline-triggers.triggerConfigurationPanel.payloadType
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="bp3-popover-wrapper Select--main bp3-fill"
                  >
                    <div
                      class="bp3-popover-target"
                    >
                      <div
                        class="bp3-input-group"
                      >
                        <input
                          autocomplete="off"
                          class="bp3-input"
                          name="sourceRepo"
                          placeholder="Search..."
                          style="padding-right: 0px;"
                          type="text"
                          value="common.repo_provider.customLabel"
                        />
                        <span
                          class="bp3-input-action"
                        >
                          <span
                            class="bp3-icon bp3-icon-caret-down StyledProps--main StyledProps--padding-small"
                            icon="caret-down"
                          >
                            <svg
                              data-icon="caret-down"
                              height="14"
                              viewBox="0 0 16 16"
                              width="14"
                            >
                              <desc>
                                caret-down
                              </desc>
                              <path
                                d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="Layout--horizontal StyledProps--main"
                style="justify-content: space-between; width: 324px;"
              >
                <div
                  class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
                >
                  <div
                    class="bp3-form-group"
                    data-id="secureToken-2"
                  >
                    <div
                      class="bp3-form-content"
                    >
                      <label
                        class="bp3-control bp3-checkbox StyledProps--font Checkbox--checkbox Checkbox--checkbox checkbox StyledProps--main StyledProps--inline"
                      >
                        <input
                          checked=""
                          name="secureToken"
                          type="checkbox"
                        />
                        <span
                          class="bp3-control-indicator"
                        />
                        secureToken
                      </label>
                    </div>
                  </div>
                </div>
                <div
                  class="StyledProps--font StyledProps--main"
                >
                  <span
                    class="bp3-popover-wrapper"
                  >
                    <span
                      class="bp3-popover-target"
                    >
                      <button
                        class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main regenerateButton Button--with-current-color Button--iconOnly Button--without-shadow"
                        data-name="regenerate-token"
                        tabindex="0"
                        type="button"
                      >
                        <span
                          class="bp3-icon StyledProps--main"
                          data-icon="main-refresh"
                        >
                          <svg
                            height="16"
                            viewBox="0 0 14 14"
                            width="16"
                          >
                            <path
                              d="M13.3.7c-.4 0-.7.3-.7.7V3C11.3 1.2 9.3 0 7 0 3.1 0 0 3.3 0 7.3c0 .4.3.7.7.7s.7-.3.7-.7c0-3.2 2.5-5.8 5.6-5.8 1.8 0 3.3.9 4.4 2.2h-.9c-.4 0-.7.3-.7.7s.3.7.7.7h2.8c.4 0 .7-.3.7-.7V1.5c0-.4-.3-.8-.7-.8zm0 5.3c-.4 0-.7.3-.7.7 0 3.2-2.5 5.8-5.6 5.8-1.8 0-3.3-.9-4.4-2.2h.9c.4 0 .7-.3.7-.7s-.3-.7-.7-.7H.7c-.4 0-.7.3-.7.7v2.9c0 .4.3.7.7.7s.7-.3.7-.7V11c1.3 1.8 3.3 3 5.6 3 3.9 0 7-3.3 7-7.3 0-.4-.3-.7-.7-.7z"
                              fill="#4d5969"
                            />
                          </svg>
                        </span>
                      </button>
                    </span>
                  </span>
                </div>
              </div>
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main fieldWarning"
              >
                <span
                  class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-yellow500"
                  data-icon="main-warning"
                >
                  <svg
                    height="16"
                    viewBox="0 0 14 12"
                    width="16"
                  >
                    <path
                      d="M13.9 11L7.6.3C7.5.1 7.3 0 7 0s-.5.1-.6.3L.1 11c-.1.1-.1.2-.1.3 0 .4.3.7.7.7h12.6c.4 0 .7-.3.7-.7 0-.1 0-.2-.1-.3zm-6.2-.3H6.3V9.3h1.4zm0-2H6.3V3.3h1.4z"
                      fill="#4d5969"
                    />
                  </svg>
                </span>
                <p
                  class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey800"
                >
                  pipeline-triggers.triggerConfigurationPanel.secureTokenRegenerateWarning
                </p>
              </div>
            </section>
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`WebhookTriggerConfigPanel Triggers tests Renders/snapshots Initial Render - Github Trigger Configuration Panel 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <form
      class="FormikForm--main"
    >
      <div>
        <div
          class="Layout--vertical StyledProps--main webhookConfigurationContainer StyledProps--padding-xxlarge"
        >
          <h2
            class="heading"
          >
            pipeline-triggers.triggerConfigurationLabel: pipeline-triggers.onNewWebhookTitle
          </h2>
          <div>
            <div
              class="StyledProps--font StyledProps--main main nameIdDescriptionTags"
            >
              <div
                class="InputWithIdentifier--txtNameContainer TextInput--main"
              >
                <div
                  class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
                >
                  <p
                    class="StyledProps--font StyledProps--main"
                  >
                    ID
                    :
                  </p>
                  <span
                    class="bp3-popover-wrapper"
                  >
                    <span
                      class="bp3-popover-target"
                    >
                      <div
                        class="bp3-editable-text bp3-editable-text-placeholder InputWithIdentifier--idValue"
                        tabindex="0"
                      >
                        <span
                          class="bp3-editable-text-content"
                          style="height: 1px; line-height: 1px; min-width: 0;"
                        />
                      </div>
                    </span>
                  </span>
                  <span
                    class="bp3-icon bp3-icon-edit StyledProps--main"
                    icon="edit"
                    style="vertical-align: middle;"
                  >
                    <svg
                      data-icon="edit"
                      height="12"
                      viewBox="0 0 16 16"
                      width="12"
                    >
                      <desc>
                        edit
                      </desc>
                      <path
                        d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </div>
                <div
                  class="bp3-form-group"
                  data-id="name-0"
                >
                  <label
                    class="bp3-label"
                    for="name"
                  >
                    name
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-input-group"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        name="name"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="StyledProps--font StyledProps--main"
              >
                <label
                  class="Label--main"
                  style="font-size: 13px; font-weight: normal;"
                >
                  optionalField
                  <span
                    class="bp3-icon bp3-icon-edit StyledProps--main editOpen StyledProps--color StyledProps--color-grey500"
                    data-name="edit"
                    data-testid="description-edit"
                    icon="edit"
                  >
                    <svg
                      data-icon="edit"
                      height="12"
                      viewBox="0 0 16 16"
                      width="12"
                    >
                      <desc>
                        edit
                      </desc>
                      <path
                        d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </label>
              </div>
              <div
                class="StyledProps--font StyledProps--main"
              >
                <label
                  class="Label--main"
                  style="font-size: 13px; font-weight: normal;"
                >
                  optionalField
                  <span
                    class="bp3-icon bp3-icon-edit StyledProps--main editOpen StyledProps--color StyledProps--color-grey500"
                    data-name="edit"
                    data-testid="tags-edit"
                    icon="edit"
                  >
                    <svg
                      data-icon="edit"
                      height="12"
                      viewBox="0 0 16 16"
                      width="12"
                    >
                      <desc>
                        edit
                      </desc>
                      <path
                        d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </label>
              </div>
            </div>
            <h2
              class="StyledProps--font StyledProps--font-h2 StyledProps--main listenOnNewWebhook"
              level="2"
            >
              pipeline-triggers.triggerConfigurationPanel.listenOnNewWebhook
            </h2>
            <section
              style="width: 650px;"
            >
              <div
                class="bp3-form-group"
                data-id="sourceRepo-1"
              >
                <label
                  class="bp3-label"
                  for="sourceRepo"
                >
                  pipeline-triggers.triggerConfigurationPanel.payloadType
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="bp3-popover-wrapper Select--main bp3-fill"
                  >
                    <div
                      class="bp3-popover-target"
                    >
                      <div
                        class="bp3-input-group"
                      >
                        <input
                          autocomplete="off"
                          class="bp3-input"
                          name="sourceRepo"
                          placeholder="Search..."
                          style="padding-right: 0px;"
                          type="text"
                          value="common.repo_provider.githubLabel"
                        />
                        <span
                          class="bp3-input-action"
                        >
                          <span
                            class="bp3-icon bp3-icon-caret-down StyledProps--main StyledProps--padding-small"
                            icon="caret-down"
                          >
                            <svg
                              data-icon="caret-down"
                              height="14"
                              viewBox="0 0 16 16"
                              width="14"
                            >
                              <desc>
                                caret-down
                              </desc>
                              <path
                                d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <section>
                <div
                  class="bp3-form-group"
                  data-id="null-2"
                >
                  <label
                    class="bp3-label"
                  >
                    connector
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <button
                      class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main container Button--iconOnly Button--without-shadow"
                      data-testid="cr-field-connectorRef"
                      style="width: 324px;"
                      type="button"
                    >
                      <span
                        class="bp3-button-text"
                      >
                        <span
                          class="placeholder"
                        >
                          select
                        </span>
                      </span>
                      <span
                        class="bp3-icon bp3-icon-caret-down StyledProps--main"
                        icon="caret-down"
                      >
                        <svg
                          data-icon="caret-down"
                          height="16"
                          viewBox="0 0 16 16"
                          width="16"
                        >
                          <desc>
                            caret-down
                          </desc>
                          <path
                            d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                    </button>
                  </div>
                </div>
                <p
                  class="StyledProps--font StyledProps--main StyledProps--intent-primary"
                  style="cursor: pointer; width: 70px;"
                >
                  plusAdd
                </p>
              </section>
              <div
                class="bp3-form-group"
                data-id="event-3"
              >
                <label
                  class="bp3-label"
                  for="event"
                >
                  pipeline-triggers.triggerConfigurationPanel.event
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="bp3-popover-wrapper Select--main bp3-fill"
                  >
                    <div
                      class="bp3-popover-target"
                    >
                      <div
                        class="bp3-input-group"
                      >
                        <input
                          autocomplete="off"
                          class="bp3-input"
                          name="event"
                          placeholder="Search..."
                          style="padding-right: 0px;"
                          type="text"
                          value=""
                        />
                        <span
                          class="bp3-input-action"
                        >
                          <span
                            class="bp3-icon bp3-icon-caret-down StyledProps--main StyledProps--padding-small"
                            icon="caret-down"
                          >
                            <svg
                              data-icon="caret-down"
                              height="14"
                              viewBox="0 0 16 16"
                              width="14"
                            >
                              <desc>
                                caret-down
                              </desc>
                              <path
                                d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </section>
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
`;
